--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(0, 0, 43);
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table {
+  width: 90%;
+  margin: 0 auto;
+}
+
+table,
+th,
+td {
+  border: 2px solid white;
+  border-collapse: collapse;
+}
+
+table tr td:first-child {
+  width: 1%;
+}
+th {
+  height: 4em;
+}
+td {
+  height: 3em;
+  text-align: center;
 }
