--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
-  background-color: rgb(0, 0, 43);
-  color: white;
+  background-color: rgb(206, 206, 206);
+  color: rgb(0, 0, 0);
+  text-transform: capitalize;
+  margin: 0 auto;
 }
 
 table {
@@ -8,10 +10,15 @@ table {
   margin: 0 auto;
 }
 
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
 table,
 th,
 td {
-  border: 2px solid white;
+  border: 2px solid rgb(0, 0, 0);
   border-collapse: collapse;
 }
 
@@ -20,8 +27,32 @@ table tr td:first-child {
 }
 th {
   height: 4em;
+  background-color: rgb(255, 195, 247);
 }
-td {
+.blue-table {
   height: 3em;
   text-align: center;
+  font-weight: 900;
+  font-size: 1.1rem;
+  background-color: rgb(176, 162, 255);
+}
+.green-table {
+  height: 3em;
+  text-align: center;
+  font-weight: 900;
+  font-size: 1.1rem;
+  background-color: rgb(113, 252, 0);
+}
+
+header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 2em;
+  justify-content: flex-end;
+  align-items: center;
+  height: 5vh;
+}
+
+header {
+  background-color: rgba(0, 0, 0, 0.164);
 }
