--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,47 @@
 body {
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(185, 184, 184);
   color: rgb(0, 0, 0);
   text-transform: capitalize;
   margin: 0 auto;
+}
+
+/* Header Stars */
+
+header {
+  background-color: rgba(0, 0, 0, 0.164);
 }
 
 header nav ul li a {
   text-decoration: none;
   color: black;
 }
+header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 2.3em;
+  justify-content: flex-end;
+  align-items: center;
+  height: 5vh;
+}
+
+/* Header ends */
+
+/* main starts */
 h2 {
   text-decoration: underline;
 }
 
-table {
-  width: 100%;
-  margin: 0 auto;
-}
-
+/* contianer starts */
 .container {
   width: 95%;
   margin: 0 auto;
 }
-
+/* contianer ends */
+/* tables Design starts */
+table {
+  width: 100%;
+  margin: 0 auto;
+}
 table,
 th,
 td {
@@ -37,6 +56,8 @@ th {
   height: 4em;
   background-color: rgb(181, 218, 255);
 }
+/* tables Design ends */
+/* conditional table color based on add or delete starts*/
 .blue-table {
   height: 3em;
   text-align: center;
@@ -51,18 +72,8 @@ th {
   font-size: 1.1rem;
   background-color: rgb(110, 183, 50);
 }
-header nav ul {
-  list-style: none;
-  display: flex;
-  gap: 2em;
-  justify-content: flex-end;
-  align-items: center;
-  height: 5vh;
-}
-
-header {
-  background-color: rgba(0, 0, 0, 0.164);
-}
+/* conditional table color based on add or delete ends*/
+/* final course table submit button starts */
 .submit-list-c {
   display: flex;
   justify-content: flex-end;
@@ -73,6 +84,18 @@ header {
   font-size: 1rem;
   font-weight: 900;
 }
+/* final course table submit button ends */
+/* final course table counter starts */
+.counter {
+  font-weight: 900;
+}
+
+.counter span {
+  font-size: 1.3rem;
+  margin-left: 0.4em;
+}
+/* final course table counter ends */
+/* search form starts */
 .form-search {
   margin-bottom: 1em;
 }
@@ -90,12 +113,9 @@ form {
   font-size: 1.1rem;
   font-weight: 600;
 }
+/* search form ends */
+/* contact me section starts*/
 
-.counter {
-  font-weight: 900;
-}
+/* contact me section ends */
 
-.counter span {
-  font-size: 1.3rem;
-  margin-left: 0.4em;
-}
+/* main ends */
